fix button alignment on small screens #942

--- a/client/styles/components/_record.scss
+++ b/client/styles/components/_record.scss
@@ -128,6 +128,9 @@
   &__button {
     @include button-base;
     @include toolbar-button;
+    @include breakpoint(small only) {
+      padding: .5em .75em;
+    }
     font-size: rem-calc(18);
 
     .icon {
